# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "kilroy-module-pytorch-py-sdk"
version = "0.1.0"
description = "SDK for kilroy modules using PyTorch 🧰"
readme = "kilroy_module_pytorch_py_sdk/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/kilroy-module-pytorch-py-sdk"
documentation = "https://kilroybot.github.io/kilroy-module-pytorch-py-sdk"
packages = [{ include = "kilroy-module-pytorch-py-sdk", from = "kilroy_module_pytorch_py_sdk/src" }]

[tool.poetry.dependencies]
python = "^3.9"

# dev

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["pytest"]
test = ["pytest"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
